[package]
authors = ["Roma Sokolov", "Alexander Zhuravlev", "Jorge Aparicio <jorge@japaric.io>"]
name = "mpu9250"
version = "0.24.1"
description = "no_std driver for the MPU9250 & onboard AK8963 (accelerometer + gyroscope +  magnetometer IMU)"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
repository = "https://github.com/copterust/mpu9250"

[dependencies]
embedded-hal = "0.2.7"
bitflags = "1.3"
libm = { version = "0.2.5", optional = true }

[dependencies.cast]
default-features = false
version = "0.3.0"

[dev-dependencies]
linux-embedded-hal = "0.3"

[features]
# Enable the I2C MPU interface. This disables the SPI interface. All function
# names remain consistent. Arguments change from (SPI, nCS) pairs to I2C
i2c = []
# Enable the use of the internal DMP features
dmp = ["libm"]
